# cogforge

./: .env  .gitignore  AGENTS.md  README.md  opencode.json  pyproject.toml  sources.yaml
.github/workflows/: auto-draft-release.yaml  publish.yaml
docs/: architecture.md  command-reference.md  product.md
docs/architecture/: ARCHITECTURE.md  adr-001-layered-architecture.md  adr-002-event-architecture.md  adr-003-core-extraction.md
docs/changes/000-foundation/: PLAN.md
docs/changes/002-substack-sync/: SESSION.md
docs/changes/006-inbox-commands/: SESSION.md
docs/changes/008-skill-cli-integration/: PLAN.md
docs/changes/009-pymupdf-pdf-preprocess/: PLAN.md
docs/changes/010-inbox-pipeline-hardening/: PLAN.md
docs/ideas/: hanyuancheung
docs/new/: arch-extra.md  product-extra.md
docs/sessions/: 2026-05-14-sprint-2-implementation.md
docs/specs/: PRODUCT.md
docs/sprints/: initial-implementation-plan.md  sprint-10-inbox-pipeline-hardening.md  sprint-8-skill-cli-integration.md
src/cogforge/: __init__.py  __main__.py  cli.py  config.py  inbox_runner.py  migrate_youtube.py  paths.py  prepare.py  reports.py  skills_sync.py  state.py  sync.py  sync_apple_notes.py  sync_youtube.py
tests/: test_cli.py  test_config.py  test_inbox_run.py  test_paths.py  test_pdf_preprocess_classify.py  test_pdf_preprocess_inbox.py  test_pdf_preprocess_manifest.py  test_pdf_preprocess_markdown_builder.py  test_pdf_preprocess_pipeline.py  test_pdf_preprocess_visual_signals.py  test_reports.py  test_state.py  test_sync.py  test_sync_apple_notes.py  test_sync_youtube.py
(+38 files in other folders)
