[project]
name = "cogforge"
version = "0.1.1"
description = "Agent-facing CLI for maintaining the LLM wiki"
readme = "README.md"
requires-python = ">=3.11"
authors = [

  { name = "Nicolas Paris", email = "ni.paris@gmail.com" }

]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "markdownify>=0.11.6",
    "python-slugify>=8.0",
    "yt-dlp>=2024.1",
    "youtube-transcript-api>=0.6.2",
    "loguru>=0.7.3",
    "pymupdf>=1.24",
    "pandas>=2.0",
    "openai>=1.0",
    "tabulate>=0.9",
    "python-dotenv>=1.0",
]

[project.scripts]
cogforge = "cogforge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cogforge"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
